--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SECRET_KEY="secret 12412rfasdfs>>???F"
 POSTGRES_HOST="postgres"
 POSTGRES_PORT="5432"
-POSTGRES_USER="postgres"
+POSTGRES_USER="arsen"
 POSTGRES_PASSWORD="123451Ra"
 POSTGRES_DB="todoList"
